deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cross-encoder
  labels:
    app: cross-encoder
spec:
  selector:
    app: cross-encoder
  ports:
    - name: http
      port: 7432
      targetPort: http
